hphp/test/zend/bad/ext/standard/tests/streams/bug61115-2.php
<?php
stream_socket_client('abc', $var, $var, 0, STREAM_CLIENT_PERSISTENT);

?>
==DONE==